--- a/misc/mrequest.html
+++ b/misc/mrequest.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./multiple-request.js"></script>
+  <script src="./ajax-request-multiple.js"></script>
 </head>
 <body>
   
